--- a/src/components/menu.html
+++ b/src/components/menu.html
@@ -10,21 +10,21 @@
     <div class="menu-container">
         <h1>Menú de Productos</h1>
         <div class="product" id="product1">
-            <img src="../assets/flower1.jpg" alt="Ramo de Rosas">
+            <img src="../assets/rosas.jpeg" alt="Ramo de Rosas">
             <h2>Ramo de Rosas</h2>
             <p>Un hermoso ramo de rosas frescas.</p>
             <p>Precio: $20.00</p>
             <button onclick="addToCart('Ramo de Rosas', 20.00)">Agregar al Carrito</button>
         </div>
         <div class="product" id="product2">
-            <img src="../assets/flower2.jpg" alt="Orquídeas">
+            <img src="../assets/lilies.jpg" alt="Orquídeas">
             <h2>Orquídeas</h2>
             <p>Elegantes orquídeas para cualquier ocasión.</p>
             <p>Precio: $30.00</p>
             <button onclick="addToCart('Orquídeas', 30.00)">Agregar al Carrito</button>
         </div>
         <div class="product" id="product3">
-            <img src="../assets/flower3.jpg" alt="Tulipanes">
+            <img src="../assets/tulips.jpg" alt="Tulipanes">
             <h2>Tulipanes</h2>
             <p>Coloridos tulipanes para alegrar tu día.</p>
             <p>Precio: $15.00</p>
